--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button class="l drum">l</button>
     </div>
 
-    <footer>Made with ❤️ in London.</footer>
+    <footer>Play the Drum kit and Enjoy the sound 😊</footer>
 
     <script src="index.js" charset="utf-8"></script>
   </body>
